--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   </head>
   <body>
     <h1>My JavaScript Blog</h1>
-    <article id="test">
+    <article>
       <p>This is the first blog post I've ever written.</p>
 
     </article>
