--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
     </article>
 
+<style type="text/css">
+	#test{
+		display: none;
+	}
+</style>
   </body>
   <script type="text/javascript" src="script.js"></script>
 </html>
