made toggle show and hidden work

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     </article>
 
 <style type="text/css">
-	#test{
+	.test{
 		display: none;
+	}
+	.show{
+		display: block;
 	}
 </style>
   </body>
