changes background color of article when clicking on article text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     </article>
 
 <style type="text/css">
+  .no-bg-color{
+    background-color: white;
+    color: black;
+  }
+  .bg-color{
+    background-color: red;
+    color: white;
+  }
 	.test{
 		display: none;
 	}
